Tweak design slightly

--- a/app/templates/pages/home.html.j2
+++ b/app/templates/pages/home.html.j2
@@ -73,9 +73,10 @@
     <style>
         #log-table select {
             background-image: none;
-            padding: 0;
+            text-align-last: center;
             padding-left: 10px;
-            margin: 0;
+            padding-right: 10px;
+            margin: 0px;
         }
     </style>
 {% endblock content %}
