Make email required

--- a/app/templates/pages/login.html.j2
+++ b/app/templates/pages/login.html.j2
@@ -9,6 +9,7 @@
                            class="form-control"
                            id="userEmail"
                            name="email"
+                           required
                            aria-describedby="emailHelp"/>
                     <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
                 </div>
