Allow submitting blank breaks

--- a/app/templates/frames/clock_in_form.html.j2
+++ b/app/templates/frames/clock_in_form.html.j2
@@ -7,6 +7,7 @@
                        name="time"
                        id="form-time"
                        data-date-type="time"
+                       data-set-default
                        required/>
                 {% if clocked_in %}
                     {% if on_break %}
