--- a/app/templates/frames/time_form.html.j2
+++ b/app/templates/frames/time_form.html.j2
@@ -23,14 +23,8 @@
                            data-date-value="{{ row.start }}"
                            {% if not time.id %} data-set-default{% endif %}
                            required/>
-                    <button class="btn btn-outline-secondary"
-                            type="button"
-                            data-toggle="tooltip"
-                            data-placement="top"
-                            onclick="this.previousElementSibling.value = ''"
-                            title="Clear End Time">
-                        <i class="bi bi-x"></i>
-                    </button>
+                    <clear-flatpickr>
+                    </clear-flatpickr>
                 </div>
             </div>
             <div class="col-md-6">
@@ -43,14 +37,8 @@
                            data-date-value="{{ row.end }}"
                            {% if not time.id %} data-set-default{% endif %}
                            required/>
-                    <button class="btn btn-outline-secondary"
-                            type="button"
-                            data-toggle="tooltip"
-                            data-placement="top"
-                            onclick="this.previousElementSibling.value = ''"
-                            title="Clear End Time">
-                        <i class="bi bi-x"></i>
-                    </button>
+                    <clear-flatpickr>
+                    </clear-flatpickr>
                 </div>
             </div>
             <div class="mt-3">
@@ -74,14 +62,8 @@
                                            name="break-start-{{ break.id }}"
                                            data-date-type="datetime"
                                            data-date-value="{{ break_start }}"/>
-                                    <button class="btn btn-outline-secondary"
-                                            type="button"
-                                            data-toggle="tooltip"
-                                            data-placement="top"
-                                            onclick="this.previousElementSibling.value = ''"
-                                            title="Clear End Time">
-                                        <i class="bi bi-x"></i>
-                                    </button>
+                                    <clear-flatpickr>
+                                    </clear-flatpickr>
                                 </div>
                             </div>
                             <div class="col-3">
@@ -91,14 +73,8 @@
                                            name="break-end-{{ break.id }}"
                                            data-date-type="datetime"
                                            data-date-value="{{ break_end }}"/>
-                                    <button class="btn btn-outline-secondary"
-                                            type="button"
-                                            data-toggle="tooltip"
-                                            data-placement="top"
-                                            onclick="this.previousElementSibling.value = ''"
-                                            title="Clear End Time">
-                                        <i class="bi bi-x"></i>
-                                    </button>
+                                    <clear-flatpickr>
+                                    </clear-flatpickr>
                                 </div>
                             </div>
                         </div>
