--- a/app/templates/email/email_change_already_exists.html.j2
+++ b/app/templates/email/email_change_already_exists.html.j2
@@ -13,8 +13,11 @@ Expected replacers:
                     <tr>
                         <td>
                             <p>👋 You requested an email change for LogMytime.</p>
-                            <p>Click the link below to verify your new email.</p>
-                            <p>If you did not ask for this change you can safely ignore this email.</p>
+                            <p>
+                                This email already has an assosciated account, if you've forgotten your password you can reset it by clicking below.
+                            </p>
+                            <p>If you did not request this change you can safely ignore this email.</p>
+
                             <table role="presentation"
                                    border="0"
                                    cellpadding="0"
@@ -27,7 +30,7 @@ Expected replacers:
                                                 <tbody>
                                                     <tr>
                                                         <td>
-                                                            <a href="{{ verify_url }}" target="_blank">Verify</a>
+                                                            <a href="{{ password_reset_url }}" target="_blank">Reset Password</a>
                                                         </td>
                                                     </tr>
                                                 </tbody>
