--- a/app/templates/layouts/wrapper.html.j2
+++ b/app/templates/layouts/wrapper.html.j2
@@ -53,9 +53,9 @@
                     {% endif %}
                 </div>
             </div>
-            {# Toast messages #}
+            {# Flash messages #}
             <div aria-live="polite" aria-atomic="true">
-                <div class="mt-3">
+                <div id="flash-messages" class="mt-3">
                     {% with messages = get_flashed_messages(with_categories=true) %}
                         {% if messages %}
                             {% for category, message in messages %}
