Add account deletion support

--- a/app/templates/partials/settings/general.html.j2
+++ b/app/templates/partials/settings/general.html.j2
@@ -50,5 +50,5 @@
         </div>
         <input type="hidden" name="csrf_token" value="{{ csrf_token() }}" />
     </div>
-    <button class="btn btn-primary" type="submit">Submit</button>
+    <button class="btn btn-primary" type="submit">Save</button>
 </form>
