--- a/app/templates/partials/settings/account.html.j2
+++ b/app/templates/partials/settings/account.html.j2
@@ -11,19 +11,91 @@
         </div>
         <div class="mb-2">
             <label class="form-label">Change Password</label>
-            {# TODO: Add show password toggle #}
-            <input class="form-control"
-                   type="password"
-                   name="password"
-                   autocomplete="new-password"
-                   value=""
-                   id="password"/>
+            <div class="input-group mb-3">
+                <input type="password"
+                       class="form-control"
+                       id="userPassword"
+                       value=""
+                       autocomplete="new-password"
+                       name="password"/>
+                <button class="btn btn-outline-secondary" type="button" id="showPassword">
+                    <i class="bi bi-eye-fill"></i>
+                </button>
+            </div>
         </div>
         <input type="hidden" name="csrf_token" value="{{ csrf_token() }}" />
     </div>
     <div class="d-flex justify-content-between">
-        <button class="btn btn-primary" type="submit">Submit</button>
-        {# TODO: Show confirmation pop up #}
-        {# <button class="btn btn-danger" type="delete">Delete Account</button> #}
+        <button class="btn btn-primary" name="submit" value="save" type="submit">Save</button>
+        <button class="btn btn-danger"
+                id="delete-account"
+                type="button"
+                data-bs-toggle="modal"
+                data-bs-target="#deleteAccountModal">
+            Delete Account
+        </button>
     </div>
 </form>
+{# Delete account modal #}
+<div class="modal fade"
+     id="deleteAccountModal"
+     tabindex="-1"
+     aria-labelledby="deleteAccountModalLabel"
+     aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="deleteAccountModalLabel">Delete Account</h5>
+                <button type="button"
+                        class="btn-close"
+                        data-bs-dismiss="modal"
+                        aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <p>Are you sure you want to delete your account?</p>
+                <p>We will delete all of your data with no way to recover it.</p>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">No, keep my account</button>
+                <button id="confirm-account-deletion" type="button" class="btn btn-danger">Yes, delete my account</button>
+            </div>
+        </div>
+    </div>
+</div>
+<script>
+    window.addEventListener("DOMContentLoaded", async () => {
+        const showPasswordBtn = document.getElementById("showPassword");
+
+        showPasswordBtn.addEventListener("click", e => {
+            e.preventDefault();
+
+            let password = document.querySelector("#userPassword");
+            if (password.type === "password") {
+                password.type = "text";
+                showPasswordBtn.innerHTML = "<i class='bi bi-eye-slash'></i>";
+            } else {
+                password.type = "password";
+                showPasswordBtn.innerHTML = "<i class='bi bi-eye-fill'></i>";
+            }
+        });
+
+        const confirmAccountDeletionBtn = document.getElementById("confirm-account-deletion");
+        confirmAccountDeletionBtn.addEventListener("click", async e => {
+            e.preventDefault();
+            const form = document.querySelector("form");
+            const formData = new FormData(form);
+            formData.append("submit", "delete-account");
+
+            const res = await fetch(form.action, {
+                method: form.method,
+                body: formData,
+            });
+
+            if (res.redirected) {
+                window.location = res.url;
+            } else {
+                flash("Something went wrong, please contact us", "danger");
+            }
+        });
+    });
+</script>
