Fix text alignment on safari

--- a/app/templates/pages/home.html.j2
+++ b/app/templates/pages/home.html.j2
@@ -73,7 +73,7 @@
     <style>
         #log-table select {
             background-image: none;
-            text-align-last: center;
+            text-align: center;
             padding-left: 10px;
             padding-right: 10px;
             margin: 0px;
