--- a/app/templates/pages/about.html.j2
+++ b/app/templates/pages/about.html.j2
@@ -1,9 +1,28 @@
 {% extends "layouts/wrapper.html.j2" %}
 {% block content %}
     <div class="mt-5">
-        <p class="fs-5">
-            LogMyTime is a basic <a href="https://github.com/danstewart/log-my-time">open source</a> web app for keeping track of your working hours and overtime.
+        <h3>About</h3>
+        <p>
+            LogMyTime is a basic, free, <a href="https://github.com/danstewart/log-my-time">open source</a> web app for keeping track of your working hours and overtime.<br />
         </p>
-        {# TODO: Flesh out, list features, add screenshots/gifs #}
+
+        <hr />
+
+        <h3>Features</h3>
+        <ul>
+            <li>Track time worked</li>
+            <li>Track overtime across multiple weeks</li>
+            <li>Track annual leave and sick days</li>
+        </ul>
+
+        <hr />
+
+        <h3>Demo</h3>
+        <img src="https://user-images.githubusercontent.com/10670565/168468584-cb9182ad-d82e-4fe5-aa96-c937a826611c.gif" />
     </div>
+
+    <style>
+        p, li {
+            font-size: 18px;
+        }
 {% endblock content %}
