Fix text alignment on safari

--- a/app/templates/pages/home.html.j2
+++ b/app/templates/pages/home.html.j2
@@ -98,7 +98,7 @@
     <style>
         #log-table select {
             background-image: none;
-            text-align: center;
+            text-indent: 5px;  /* See: https://stackoverflow.com/a/68995740/15970183 */
             padding-left: 10px;
             padding-right: 10px;
             margin: 0px;
