--- a/app/templates/layouts/wrapper.html.j2
+++ b/app/templates/layouts/wrapper.html.j2
@@ -15,28 +15,20 @@
               type="image/png"
               sizes="32x32"
               href="/static/icons/favicon-32x32.png"/>
-        <!-- Bootstrap 5 CSS -->
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
-              rel="stylesheet"
-              integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
-              crossorigin="anonymous"/>
-        <link rel="stylesheet"
-              href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css"/>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
-        <!-- Flatpickr CSS -->
-        <link rel="stylesheet"
-              href="https://cdn.jsdelivr.net/npm/flatpickr@4.6.11/dist/flatpickr.min.css"/>
-        <script src="https://cdn.jsdelivr.net/npm/flatpickr@4.6.11/dist/flatpickr.min.js"></script>
+
+        <!-- Third party assets -->
+        {# djlint:off #}
+        {% include "partials/assets/bootstrap.html.j2" %}
+        {% include "partials/assets/flatpickr.html.j2" %}
+        {# djlint:on #}
+
         <!-- Our CSS and js -->
         <link rel="stylesheet" href="/static/css/default.css" />
         <script type="module" defer src="/static/js/main.js"></script>
     </head>
+
     <body style="padding-bottom: 500px;">
-        {% if FLASK_DEBUG %}
-            <div class="debug-bar">
-                DEBUG MODE
-            </div>
-        {% endif %}
+        {% if FLASK_DEBUG %}<div class="debug-bar">DEBUG MODE</div>{% endif %}
 
         <div class="container mt-3">
             {# Header #}
