WIP: Migrate to Flask-SQLAlchemy

--- a/app/templates/frames/time_log_table.html.j2
+++ b/app/templates/frames/time_log_table.html.j2
@@ -51,7 +51,18 @@
                  aria-labelledby="accordion-annual-leave-header"
                  data-bs-parent="#accordion-forms">
                 <div class="container mt-2 mb-2">
-                    <dynamic-frame :url="/frames/leave_form/" :execute-scripts="true">
+                    <dynamic-frame :url="/frames/annual_leave_form/" :execute-scripts="true">
+                    </dynamic-frame>
+                </div>
+            </div>
+
+            {# Accordion body for logging sick leave #}
+            <div id="accordion-sick-leave-body"
+                 class="accordion-collapse collapse border-bottom"
+                 aria-labelledby="accordion-annual-leave-header"
+                 data-bs-parent="#accordion-forms">
+                <div class="container mt-2 mb-2">
+                    <dynamic-frame :url="/frames/sick_leave_form/" :execute-scripts="true">
                     </dynamic-frame>
                 </div>
             </div>
