Support creating annual leave

--- a/app/templates/frames/time_log_table.html.j2
+++ b/app/templates/frames/time_log_table.html.j2
@@ -51,7 +51,7 @@
                  aria-labelledby="accordion-annual-leave-header"
                  data-bs-parent="#accordion-forms">
                 <div class="container mt-2 mb-2">
-                    <dynamic-frame :url="/frames/annual_leave_form/" :execute-scripts="true">
+                    <dynamic-frame :url="/frames/leave_form/" :execute-scripts="true">
                     </dynamic-frame>
                 </div>
             </div>
