Display leave records in main list

--- a/app/templates/pages/home.html.j2
+++ b/app/templates/pages/home.html.j2
@@ -16,7 +16,7 @@
     <!-- Time Log Table -->
     <dynamic-frame id="log-table"
                    :execute-scripts="true"
-                   :url="/frames/time-log-table"
+                   :url="/frames/entries"
                    :param-week=""
                    :mount-point=".content">
         {# Control which week we are viewing in the list #}
