--- a/app/templates/frames/entries_table.html.j2
+++ b/app/templates/frames/entries_table.html.j2
@@ -69,40 +69,76 @@
         </div>
 
         {# List of existing time records #}
-        {% for time in time_entries %}
-            {# djlint:off #}
-            {% set now = arrow.now() %}
-            {% set start = arrow.get(time.start).to(settings.timezone) %}
-            {% set end = arrow.get(time.end).to(settings.timezone) if time.end else '' %}
-            {# djlint:on #}
+        {% for rec in records %}
+            {% if type_of(rec) == "Time" %}
+                {# djlint:off #}
+                {% set now = arrow.now() %}
+                {% set start = arrow.get(rec.start).to(settings.timezone) %}
+                {% set end = arrow.get(rec.end).to(settings.timezone) if rec.end else '' %}
+                {# djlint:on #}
 
-            <div class="accordion-item">
-                <h2 class="accordion-header" id="accordion-{{ time.id }}-header">
-                    <button class="accordion-button collapsed"
-                            type="button"
-                            data-bs-toggle="collapse"
-                            data-bs-target="#accordion-{{ time.id }}-body"
-                            aria-controls="{{ time.id }}-accordion-body">
-                        <div class="d-flex justify-content-between flex-grow-1">
-                            <div class="d-flex flex-column">
-                                <p class="fw-bold mb-1">{{ start.format("dddd Do [of] MMM") }}</p>
-                                <p>{{ start.format("HH:mm") }} - {{ end.format("HH:mm") if end else 'Still clocked in' }}</p>
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="accordion-{{ rec.id }}-header">
+                        <button class="accordion-button collapsed"
+                                type="button"
+                                data-bs-toggle="collapse"
+                                data-bs-target="#accordion-{{ rec.id }}-body"
+                                aria-controls="{{ rec.id }}-accordion-body">
+                            <div class="d-flex justify-content-between flex-grow-1">
+                                <div class="d-flex flex-column">
+                                    <p class="fw-bold mb-1">{{ start.format("dddd Do [of] MMM") }}</p>
+                                    <p>{{ start.format("HH:mm") }} - {{ end.format("HH:mm") if end else 'Still clocked in' }}</p>
+                                </div>
+                                <span class="badge bg-secondary time-badge">{{ humanize_seconds(rec.logged(), short=True) }}</span>
                             </div>
-                            <span class="badge bg-secondary time-badge">{{ humanize_seconds(time.logged(), short=True) }}</span>
+                        </button>
+                    </h2>
+                    <div id="accordion-{{ rec.id }}-body"
+                         class="accordion-collapse collapse"
+                         aria-labelledby="accordion-{{ rec.id }}-header"
+                         data-parent="#accordion-{{ rec.id }}">
+                        <div class="container mt-2 mb-2">
+                            {# TODO: Make this frame lazily loaded #}
+                            <dynamic-frame :url="/frames/time_form/{{ rec.id }}" :execute-scripts="true">
+                            </dynamic-frame>
                         </div>
-                    </button>
-                </h2>
-                <div id="accordion-{{ time.id }}-body"
-                     class="accordion-collapse collapse"
-                     aria-labelledby="accordion-{{ time.id }}-header"
-                     data-parent="#accordion-{{ time.id }}">
-                    <div class="container mt-2 mb-2">
-                        {# TODO: Make this frame lazily loaded #}
-                        <dynamic-frame :url="/frames/time_form/{{ time.id }}" :execute-scripts="true">
-                        </dynamic-frame>
                     </div>
                 </div>
-            </div>
+            {% elif type_of(rec) == "Leave" %}
+                {# djlint:off #}
+                {% set now = arrow.now() %}
+                {% set start = arrow.get(rec.start).to(settings.timezone) %}
+                {# djlint:on #}
+
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="accordion-{{ rec.id }}-header">
+                        <button class="accordion-button collapsed"
+                                type="button"
+                                data-bs-toggle="collapse"
+                                data-bs-target="#accordion-{{ rec.id }}-body"
+                                aria-controls="{{ rec.id }}-accordion-body">
+                            <div class="d-flex justify-content-between flex-grow-1">
+                                <div class="d-flex flex-column">
+                                    <p class="fw-bold mb-1">{{ start.format("dddd Do [of] MMM") }}</p>
+                                    <p>{{ rec.leave_type | title }} Leave</p>
+                                </div>
+
+                                <span class="badge bg-secondary time-badge">{{ humanize_seconds(rec.duration * settings.hours_per_day * 3600, short=True) }}</span>
+                            </div>
+                        </button>
+                    </h2>
+                    <div id="accordion-{{ rec.id }}-body"
+                         class="accordion-collapse collapse"
+                         aria-labelledby="accordion-{{ rec.id }}-header"
+                         data-parent="#accordion-{{ rec.id }}">
+                        <div class="container mt-2 mb-2">
+                            {# TODO: Make this frame lazily loaded #}
+                            <dynamic-frame :url="/frames/leave_form/{{ rec.id }}" :execute-scripts="true">
+                            </dynamic-frame>
+                        </div>
+                    </div>
+                </div>
+            {% endif %}
         {% endfor %}
     </div>
 </section>
